--- a/index.html
+++ b/index.html
@@ -1,131 +1,38 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="pl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Smart Todo</title>
-
-  <!-- Google Font -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-
-  <!-- Styles -->
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>WhatToDo App</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <main class="container">
-    <header>
-      <h1>✅ Smart Todo</h1>
-      <p class="subtitle">Organize your tasks smartly</p>
-    </header>
 
-    <!-- Error -->
-    <div id="errorMessage" class="error-message"></div>
-
-    <!-- Input -->
-    <section class="input-group">
-      <input 
-        type="text" 
-        id="todoInput" 
-        class="todo-input" 
-        placeholder="What needs to be done?"
-        autocomplete="off"
-      >
-      <button id="addBtn" class="add-btn">Add Task</button>
-    </section>
-
-    <!-- Todo List -->
-    <section class="list-section">
-      <ul id="todoList" class="todo-list"></ul><!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Smart Todo</title>
-
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <main class="container">
-    <header>
-      <h1>✅ Smart Todo</h1>
-      <p class="subtitle">Organize your tasks smartly</p>
-    </header>
+<div class="container">
+    <h1>What To Do?</h1>
 
     <div id="errorMessage" class="error-message"></div>
 
-    <!-- INPUTS -->
-    <section class="input-group">
+    <!-- Główne inputy -->
+    <input type="text" id="todoInput" class="todo-input" placeholder="Task name..." autocomplete="off">
 
-      <input 
-        type="text" 
-        id="todoInput" 
-        class="todo-input" 
-        placeholder="Task title"
-        autocomplete="off"
-      >
+    <!-- Nowe pole 1 – opis -->
+    <input type="text" id="todoDesc" class="todo-input" placeholder="Description (optional)" autocomplete="off">
 
-      <input 
-        type="text" 
-        id="todoDesc" 
-        class="todo-input" 
-        placeholder="Description (optional)"
-        autocomplete="off"
-      >
+    <!-- Nowe pole 2 – data -->
+    <input type="date" id="todoDeadline" class="todo-input">
 
-      <input 
-        type="date" 
-        id="todoDeadline" 
-        class="todo-input"
-      >
+    <button id="addBtn" class="add-btn">Add Task</button>
 
-      <button id="addBtn" class="add-btn">Add Task</button>
-    </section>
+    <ul id="todoList" class="todo-list"></ul>
 
-    <section class="list-section">
-      <ul id="todoList" class="todo-list"></ul>
-    </section>
+    <!-- Paginacja -->
+    <div class="pagination">
+        <button id="prevPage" class="pagination-btn">Previous</button>
+        <button id="nextPage" class="pagination-btn">Next</button>
+    </div>
+</div>
 
-    <footer>
-      <div id="pagination" class="pagination"></div>
-    </footer>
-  </main>
-
-  <!-- Supabase client -->
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-  <script>
-    const SUPABASE_URL = "https://lpophlzugttsxwoocqhr.supabase.co";
-    const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imxwb3BobHp1Z3R0c3h3b29jcWhyIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjQ5MzgyMjMsImV4cCI6MjA4MDUxNDIyM30.DGlVe8ZYAeBQlAeHdkI2UmJKwUgwihX25r5tZ4HdNn8";
-    window.supabase = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
-  </script>
-
-  <script src="script.js"></script>
-</body>
-</html>
-
-    </section>
-
-    <!-- Pagination -->
-    <footer>
-      <div id="pagination" class="pagination"></div>
-    </footer>
-  </main>
-
-  <!-- Supabase client (CDN) and initialization -->
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-  <script>
-    // === Твои параметры Supabase ===
-    const SUPABASE_URL = "https://lpophlzugttsxwoocqhr.supabase.co";
-    const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imxwb3BobHp1Z3R0c3h3b29jcWhyIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjQ5MzgyMjMsImV4cCI6MjA4MDUxNDIyM30.DGlVe8ZYAeBQlAeHdkI2UmJKwUgwihX25r5tZ4HdNn8";
-    window.supabase = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
-  </script>
-
-  <!-- App script -->
-  <script src="script.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
