--- a/index.html
+++ b/index.html
@@ -32,6 +32,15 @@
         placeholder="What needs to be done?"
         autocomplete="off"
       >
+
+      <input 
+        type="text" 
+        id="todoDetails" 
+        class="todo-input"
+        placeholder="Details (optional)"
+        autocomplete="off"
+      >
+
       <button id="addBtn" class="add-btn">Add Task</button>
     </section>
 
@@ -46,16 +55,14 @@
     </footer>
   </main>
 
-  <!-- Supabase client (CDN) and initialization -->
+  <!-- Supabase -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <script>
-    // === Твои параметры Supabase ===
     const SUPABASE_URL = "https://lpophlzugttsxwoocqhr.supabase.co";
     const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imxwb3BobHp1Z3R0c3h3b29jcWhyIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjQ5MzgyMjMsImV4cCI6MjA4MDUxNDIyM30.DGlVe8ZYAeBQlAeHdkI2UmJKwUgwihX25r5tZ4HdNn8";
     window.supabase = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
   </script>
 
-  <!-- App script -->
   <script src="script.js"></script>
 </body>
 </html>
