--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <main class="container">
     <header>
-      <h1>✅ Smart Todo</h1>
+      <h1>Smart Todo</h1>
       <p class="subtitle">Organize your tasks smartly</p>
     </header>
     
