--- a/index.html
+++ b/index.html
@@ -1,52 +1,92 @@
-<!DOCTYPE html>
-<html lang="ru">
+<!doctype html>
+<html lang="pl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Smart Todo</title>
-
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-
-  <link rel="stylesheet" href="styles.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Encja: Tasks — CRUD (Supabase)</title>
+  <link rel="stylesheet" href="styles.css" />
+  <!-- Supabase JS CDN -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.27.0/dist/supabase.min.js"></script>
 </head>
 <body>
-  <main class="container">
+  <div class="container">
     <header>
-      <h1>Smart Todo</h1>
-      <p class="subtitle">Organize your tasks smartly</p>
+      <h1>Tasks — CRUD (encja)</h1>
+      <p class="muted">Prosty frontend do zarządzania encją <strong>tasks</strong> (Supabase).</p>
     </header>
-    
-    <div id="errorMessage" class="error-message"></div>
 
+    <section id="form-section">
+      <h2 id="form-title">Dodaj nowe zadanie</h2>
+      <form id="task-form">
+        <input type="hidden" id="task-id" value="" />
+        <div class="field">
+          <label for="title">Tytuł *</label>
+          <input id="title" name="title" type="text" required maxlength="255" />
+        </div>
+        <div class="field">
+          <label for="description">Opis</label>
+          <textarea id="description" name="description" rows="3"></textarea>
+        </div>
+        <div class="field">
+          <label for="priority">Priorytet (liczba 1-5) *</label>
+          <input id="priority" name="priority" type="number" min="1" max="5" value="3" required />
+        </div>
+        <div class="field">
+          <label for="due_date">Data wykonania</label>
+          <input id="due_date" name="due_date" type="date" />
+        </div>
+        <div class="field checkbox">
+          <label><input id="completed" name="completed" type="checkbox" /> Wykonane</label>
+        </div>
 
-    <section class="input-group">
-      <input type="text" id="titleInput" placeholder="Task title" class="todo-input" autocomplete="off">
-      <input type="text" id="descInput" placeholder="Description" class="todo-input" autocomplete="off">
-      <input type="date" id="dueInput" class="todo-input">
-      <button id="addBtn" class="add-btn">Add Task</button>
+        <div class="actions">
+          <button type="submit" id="save-btn">Zapisz</button>
+          <button type="button" id="cancel-edit" class="secondary">Anuluj</button>
+        </div>
+      </form>
     </section>
 
+    <section id="list-section">
+      <h2>Lista zadań</h2>
+      <div id="controls">
+        <input id="search" placeholder="Szukaj po tytule..." />
+        <select id="filter">
+          <option value="all">Wszystkie</option>
+          <option value="pending">Niewykonane</option>
+          <option value="done">Wykonane</option>
+        </select>
+        <button id="refresh">Odśwież</button>
+      </div>
 
-    <section class="list-section">
-      <ul id="todoList" class="todo-list"></ul>
+      <table id="tasks-table" aria-live="polite">
+        <thead>
+          <tr>
+            <th>Tytuł</th>
+            <th>Priorytet</th>
+            <th>Data</th>
+            <th>Wykonane</th>
+            <th>Akcje</th>
+          </tr>
+        </thead>
+        <tbody id="tasks-body">
+          <!-- wiersze generowane dynamicznie -->
+        </tbody>
+      </table>
+      <div id="empty">Brak zadań.</div>
     </section>
-
 
     <footer>
-      <div id="pagination" class="pagination"></div>
+      <small>Pliki: index.html, styles.css, skript.js, README.md</small>
     </footer>
-  </main>
+  </div>
 
-
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <!-- IMPORTANT: Wklej swoje wartości Supabase poniżej -->
   <script>
-    const SUPABASE_URL = "https://cmmzhydmdrzujbgpbike.supabase.co"; // podmień na swój URL
-    const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImNtbXpoeWRtZHJ6dWpiZ3BiaWtlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjQ5NDAwOTQsImV4cCI6MjA4MDUxNjA5NH0.NO3xiLd2jV5WrXPoqjeuKxp_R_5EjtuFwctSY1Eym8I"; // podmień na swój anon key
-    window.supabase = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+    // ZAMIEN NA SWOJE DANE:
+    const SUPABASE_URL = "https://YOUR_SUPABASE_PROJECT.supabase.co";
+    const SUPABASE_ANON_KEY = "YOUR_ANON_KEY";
   </script>
 
-  <script src="script.js"></script>
+  <script src="skript.js"></script>
 </body>
 </html>
