--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </section>
 
     <footer>
-      <small>Pliki: index.html, styles.css, skript.js, README.md</small>
+      <small>Pliki: index.html, styles.css, script.js, README.md</small>
     </footer>
   </div>
 
