--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
          const SUPABASE_URL = "https://abcd1234.supabase.co";
          const SUPABASE_ANON_KEY = "eyJhbGciOiJI...";
     */
-    const SUPABASE_URL = "REPLACE_WITH_YOUR_SUPABASE_URL";
-    const SUPABASE_ANON_KEY = "REPLACE_WITH_YOUR_SUPABASE_ANON_KEY";
+    const SUPABASE_URL = "https://cmmzhydmdrzujbgpbike.supabase.co";
+    const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImNtbXpoeWRtZHJ6dWpiZ3BiaWtlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjQ5NDAwOTQsImV4cCI6MjA4MDUxNjA5NH0.NO3xiLd2jV5WrXPoqjeuKxp_R_5EjtuFwctSY1Eym8I";
   </script>
 
   <script src="script.js"></script>
