--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <script>
     // Zamień poniższe stringi na wartości z Twojego projektu Supabase.
     // NIE dodawaj tutaj niczego poza tymi dwoma zmiennymi.
-    const SUPABASE_URL = "https://your-project-ref.supabase.co";
-    const SUPABASE_ANON_KEY = "eyJhbGci...your_anon_key...";
+    const SUPABASE_URL = "https://cmmzhydmdrzujbgpbike.supabase.co";
+    const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImNtbXpoeWRtZHJ6dWpiZ3BiaWtlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjQ5NDAwOTQsImV4cCI6MjA4MDUxNjA5NH0.NO3xiLd2jV5WrXPoqjeuKxp_R_5EjtuFwctSY1Eym8I";
 
     // Eksport do global scope dla script.js
     window.SUPABASE = { url: SUPABASE_URL, anonKey: SUPABASE_ANON_KEY };
