--- a/index.html
+++ b/index.html
@@ -1,62 +1,101 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Aplikacja A + B</title>
-  <link rel="stylesheet" href="styles.css" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Books CRUD (Supabase)</title>
+  <link rel="stylesheet" href="styles.css">
+
+  <!-- SUPABASE JS -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 <body>
 
-  <h1>Lista zadań (Supabase)</h1>
+  <main class="container">
+    <h1>📚 Books CRUD — Supabase</h1>
 
-  <form id="item-form">
-    <input type="hidden" id="item-id" />
+    <div class="actions">
+      <button id="btn-refresh">Odśwież listę</button>
+      <button id="btn-open-add">Dodaj książkę</button>
+    </div>
 
-    <label>
-      Tytuł*
-      <input id="title" type="text" required />
-    </label>
+    <!-- FORMULARZ -->
+    <section id="form-section" class="hidden">
+      <h2 id="form-title">Dodaj książkę</h2>
 
-    <label>
-      Opis
-      <textarea id="description"></textarea>
-    </label>
+      <form id="book-form">
+        <input type="hidden" id="book-id">
 
-    <label>
-      Priorytet (1–5)*
-      <input id="priority" type="number" min="1" max="5" required />
-    </label>
+        <label>
+          Tytuł *
+          <input id="title" required minlength="2">
+        </label>
 
-    <label>
-      Termin wykonania
-      <input id="due_date" type="date" />
-    </label>
+        <label>
+          Autor
+          <input id="author">
+        </label>
 
-    <label class="checkbox-row">
-      <input id="done" type="checkbox" />
-      Wykonane (B)
-    </label>
+        <label>
+          Liczba stron
+          <input id="pages" type="number" min="1">
+        </label>
 
-    <button type="submit">Zapisz</button>
-  </form>
+        <label>
+          Data wydania
+          <input id="published_date" type="date">
+        </label>
 
-  <hr />
+        <!-- CHECKBOX DO ODZNACZENIA -->
+        <label class="checkbox-area">
+          <input type="checkbox" id="confirm-checkbox" required>
+          <span>Potwierdzam zapis danych</span>
+        </label>
 
-  <table id="items-table">
-    <thead>
-      <tr>
-        <th>ID</th>
-        <th>Tytuł</th>
-        <th>Opis</th>
-        <th>Priorytet</th>
-        <th>Termin</th>
-        <th>Wykonane</th>
-        <th>Akcje</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
+        <div class="form-actions">
+          <button type="submit" id="btn-save" disabled>Zapisz</button>
+          <button type="button" id="btn-cancel">Anuluj</button>
+        </div>
+      </form>
+    </section>
+
+    <!-- LISTA -->
+    <section id="list-section">
+      <h2>Lista książek</h2>
+      <div id="list-info" class="muted">Ładowanie...</div>
+
+      <table id="books-table" class="hidden">
+        <thead>
+          <tr>
+            <th>ID</th>
+            <th>Tytuł</th>
+            <th>Autor</th>
+            <th>Stron</th>
+            <th>Data wyd.</th>
+            <th>Utworzono</th>
+            <th>Akcje</th>
+          </tr>
+        </thead>
+        <tbody id="books-tbody"></tbody>
+      </table>
+    </section>
+
+    <!-- SZCZEGÓŁY -->
+    <section id="detail-section" class="hidden">
+      <h2>Szczegóły</h2>
+      <pre id="detail-pre"></pre>
+      <button id="btn-close-detail">Zamknij</button>
+    </section>
+
+  </main>
+
+  <!-- KONFIGURACJA SUPABASE (TUTAJ WKLEJASZ SWÓJ KLUCZ) -->
+  <script>
+    const SUPABASE_URL = "";
+    const SUPABASE_ANON_KEY ="";
+
+    window.supabase = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+  </script>
 
   <script src="script.js"></script>
 </body>
